--- a/indexPhysx.html
+++ b/indexPhysx.html
@@ -1541,20 +1541,20 @@ Removed superhands controller support and replaced with handy-controls which sup
     <!-- Ground collider to prevent objects from falling endlessly -->
     <a-plane physx-body= "type: static" height="10" width="10" rotation="-90 0 0" color= "red" visible="true"></a-plane>
     
-    <!-- Invisible boundary walls to keep objects within reach 
-    <!-- Front boundary (between user and panels) - wider and higher 
+    <!-- Invisible boundary walls to keep objects within reach -->
+    <!-- Front boundary (between user and panels) - wider and higher  -->
 <a-box physx-body="type: static" position="0 1.5 -2.8" width="10" height="4" depth="0.1" visible="false"></a-box>
 
-<!-- Back boundary (behind the user) - wider and higher 
+<!-- Back boundary (behind the user) - wider and higher  -->
 <a-box physx-body="type:static" position="0 1.5 3" width="10" height="4" depth="0.1" visible="false"></a-box>
 
-<!-- Left boundary - taller and deeper 
+<!-- Left boundary - taller and deeper  -->
 <a-box physx-body="type: static" position="-5 1.5 0" width="0.1" height="4" depth="10" visible="false"></a-box>
 
-<!-- Right boundary - taller and deeper 
+<!-- Right boundary - taller and deeper  -->
 <a-box physx-body="type: static" position="5 1.5 0" width="0.1" height="4" depth="10" visible="false"></a-box>
 
-<!-- Ceiling to prevent objects from going too high - wider and longer 
+<!-- Ceiling to prevent objects from going too high - wider and longer  -->
 <a-box physx-body="type: static" position="0 2 0" width="10" height="0.1" depth="10" visible="false"></a-box>
 -->
     <!-- OVERVIEW Panel -->
