--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,25 @@ function formatTopSkills(radarData, count) {
 
 </script>
 
+<script>
+  // Toggle physx body on hand pose
+  AFRAME.registerComponent('toggle-physx-body', {
+    init: function () {
+      var el = this.el;
+      el.addEventListener('pose_fist', function(){
+	  console.log("physics set to static")
+	  document.getElementById("myID7").setAttribute('physx-body', 'type', 'static');
+      });
+
+    el.addEventListener('pose_flat', function(){
+	  setTimeout(document.getElementById("myID7").setAttribute('physx-body', 'type', 'dynamic'), 100);
+      console.log("physics set to dynamic")
+      });
+    }
+	});
+
+</script>
+
   <style>
     body { margin: 0; overflow: hidden; }
   </style>
@@ -1515,7 +1534,7 @@ Removed superhands controller support and replaced with handy-controls which sup
         
         <!-- These get drawn towards grabable objects, moving the whole hand and the attached elements-->
 		<!-- The poses on stopEvents are different as the poses are inconsistent between hands https://github.com/AdaRoseCannon/handy-work/issues/16 -->
-        <a-entity id="right-magnet" data-right="grip" data-magnet="magnet-right" grab-magnet-target="startEvents:squeezestart,pose_fist;stopEvents:pose_flat_fuseShort,squeezeend;noMagnetEl:#right-no-magnet;" right-pose-indicator></a-entity>
+        <a-entity id="right-magnet" data-right="grip" data-magnet="magnet-right" grab-magnet-target="startEvents:squeezestart,pose_fist;stopEvents:pose_flat_fuseShort,squeezeend;noMagnetEl:#right-no-magnet;" right-pose-indicator toggle-physx-body></a-entity>
 		<a-entity id="left-magnet" data-left="grip"  data-magnet="magnet-left"  grab-magnet-target="startEvents:squeezestart,pose_fist;stopEvents:pose_relax_fuseShort,squeezeend;noMagnetEl:#left-no-magnet;" left-pose-indicator></a-entity>
         <!-- markers to let us know the real location of the hands, you probably want to make them visible="false" or just make them empty <a-entities> -->
         <a-entity id="left-no-magnet" data-left="grip" data-no-magnet></a-entity>
@@ -1688,10 +1707,42 @@ Removed superhands controller support and replaced with handy-controls which sup
 		<a-entity geometry="primitive: sphere; radius: 0.18" 
                 material="color: #ff9a8b; opacity: 0.0; transparent: true"></a-entity>
     </a-box>
-    <!-- Software Engineering (Pyramid)
 	
-	-->
-    <a-tetrahedron physx-body= "type: dynamic" physx-material="collisionLayers: [2]" position="-0.5 0.4 0" color="#ff6b6b" radius="0.15"
+	
+	 <!-- temp -->
+	<a-tetrahedron id="myID7" physx-body= "type: static" position="-0.5 1.8 0" color="blue" radius="0.15"
+                    mixin="course-object-interactive" class="interactive"
+                    course-object="course: SE" toggle-physx-body> 
+		<a-entity id="extra handle" data-magnet-range="0.2,0.1,360,180" data-pick-up="parent" class="magnet-left magnet-right" position="0 0.1 -0.1" rotation="0 90 0"></a-entity>
+		<a-entity position="0 0.3 0" face-user text="value: SE; align: center; color: white; width: 5"></a-entity>
+        <a-entity geometry="primitive: sphere; radius: 0.2" 
+                material="color: #ff6b6b; opacity: 0.0; transparent: true"></a-entity>
+    </a-tetrahedron>
+
+	
+	
+	 <!-- temp2 | seperate handle test -->
+	<a-cylinder id="myID1" physx-body= "type: dynamic" position="0.5 1.8 0" color="blue" scale="0.1 0.2 0.1 "
+                    mixin="course-object-interactive" class="interactive"
+                    course-object="course: SE" > 
+		<a-cylinder id="visible-handle" position="0 0.7 0"   scale="0.2 1 0.2"></a-cylinder>
+		<a-entity id="cyl handle" data-magnet-range="0.2,0.1,360,180" data-pick-up="parent" class="magnet-left magnet-right" position="0 2 0" rotation="0 0 0"></a-entity>
+		<a-entity position="0 0.3 0" face-user text="value: SE; align: center; color: white; width: 5"></a-entity>
+        <a-entity geometry="primitive: sphere; radius: 0.2" 
+                material="color: #ff6b6b; opacity: 0.0; transparent: true"></a-entity>
+    </a-cylinder>
+	
+	<script>
+		//console.log(document.getElementById("myID7").position)
+		//console.log("THIS BIT WORKS!!");
+		document.getElementById("myID7").setAttribute('physx-body', 'type', 'dynamic');
+		console.log("changed")
+	</script>
+	
+	
+	
+    <!-- Software Engineering (Pyramid) -->
+    <a-tetrahedron physx-body= "type: dynamic" position="-0.5 0.4 0" color="#ff6b6b" radius="0.15"
                     mixin="course-object-interactive" class="interactive"
                     course-object="course: SE"> 
 		<a-entity id="SE handle" data-magnet-range="0.2,0.1,360,180" data-pick-up="parent" class="magnet-left magnet-right" position="0 0.1 -0.1" rotation="0 90 0"></a-entity>
