--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <!-- the AFrame library and 3rd party components -->
   <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.5.0/dist/aframe-environment-component.min.js"></script>
+ <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/components/sphere-collider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.controls.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/physx@v0.2.0/dist/physx.min.js"></script>
@@ -19,7 +19,6 @@
   <script src="https://cdn.jsdelivr.net/npm/handy-work@3.1.11/build/handy-controls.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/handy-work@3.1.11/build/magnet-helpers.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aframe-htmlmesh@2.4.0/build/aframe-html.min.js"></script>
-  <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
   <script src="simple-navmesh-constraint.js"></script>
   
   <script src="model-utils.js"></script>
@@ -1444,9 +1443,11 @@ Removed superhands controller support and replaced with handy-controls which sup
 
  <a-scene
     physx="autoLoad: true; delay: 1000; wasmUrl: https://cdn.jsdelivr.net/gh/c-frame/physx@v0.2.0/wasm/physx.release.wasm; useDefaultScene: false;"
-    background="color:skyblue;" envrionment="preset: forest; groundColor: #445; grid: cross"
+    background="color:skyblue;" environment="preset: forest; groundColor: #445; grid: cross"
     xr-mode-ui="XRMode:xr">
     <a-assets>
+	
+	
       <!-- Mixins for interactive objects -- changed to support new physx over old physics library -->
       <a-mixin id="course-object-interactive" 
                shadow="receive:true;"
