--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ window.resetObjects = function () {
           });
         } else if (contentType === "skills") {
 		 updatePanelWithFormattedContent(panelText, {
-         content: `${courseInfo.name}\n\n\n\n\n\n\n\n\n\n\n Skills Radar Chart`
+         content: `${courseInfo.name}\n\n\n\n\n\n\n\n\n\n\n\n Skills Radar Chart`
 		 });
          formatSkillsContent (courseInfo.radar);
         }
